# DoLink

./: alembic.ini  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 55a23716876f_описание_изменений.py
app/: main.py
app/auth/: auth_function.py
app/database/: dao.py  database.py
app/dependencies/: auth.py
app/microservices/: __init__.py  tg_notifier.py
app/models/: __init__.py  categories.py  category.py  proposals.py  task.py  tasks.py  user.py  users.py
app/repository/: category_repository.py  proposal_repository.py  task_repository.py  user_repository.py
app/routers/: __init__.py  proposals.py  tasks.py  users.py
app/schemas/: category.py  proposal.py  task.py  user.py
app/services/: proposal_service.py  task_service.py  user_service.py
app/test_create_db/: create.py
